@@ -11,27 +11,27 @@ DIST docutils-0.8.1.tar.gz 1499832 SHA256 5a3b776518257a59fefaf48ef1e0635bc1179f
 DIST docutils-0.9.1.tar.gz 1541437 SHA256 e89f187dbbc6674f839239c89fec44af9f18809b66a8a55a41b57b9ee2356994 SHA512 ac1158c562533796f26d4bc451cc9cd371f7fad60d190aa43c763d53a15c2b7656962e7ef72248439896a5fd759c53f6aee14b08bca2292542e944fa9bb044e9 WHIRLPOOL 6b197c1e96a218d9a3a2116ea6e68cae22130c77025fe6e6942f698a918b96579a9216daf23e01cb1c54c7d52ddcc4a3e8ec1b8279ae7be7e3044e044e14c039
 DIST docutils-0.9.tar.gz 1534138 SHA256 ff49bf77e9135490a73740d884b418ab8b982ad16ee52cfe796d059c592ea245 SHA512 ce015d79093e8fa0e14851c5f122a2c2d38981c82358bb1a9219271af2d12bf3219abbeed362114342ebd5a7173e0bf4a3686987c70bb950c72c2ffa3fed2440 WHIRLPOOL b33d34a5de0adb7e77a3c053b3cd800152e1bcdac1006aac5b7450465844d176a2a7e9b6e41507343bcfc747aba9316f01df661f84555d5a9bc28a42db202320
 DIST glep-0.4-r1.tbz2 4667 SHA256 d0b421869fb3437e96484687fd57f34d4f5cdd5a1fbdb2314f1474b1f9afa058 SHA512 098d9f5043a60af9dfac63f6472b576e66ffeda924902ca825ed63f573aeb8bad7c9f9a6853fd99e648683488ee6db2ee55c139df3dde06983b72cfb5dd8cdd3 WHIRLPOOL 277cdf4a7fe70990864a4f0fd592561bcf5edc1de8d4830da96c75093d47d8d64214b95ac5ae7960670a8520650a5e23355df248f61bddcd9cd5dc23cab0fe19
-EBUILD docutils-0.10.ebuild 2182 SHA256 b23ebfd1c7f9dbb3af34291f0d2dd1487d207abb571f7639889677aeef613f8d SHA512 69be209196ba10353c8448e28fc855ed3f1a878f3c44ad7ae55641e7d2dc090ba5930eb39a786ba691ef126783047866ac3b5d01bd60ba42fbcead641e191f30 WHIRLPOOL 657491783ba319d2ee52fa62db9b883c333f024d395a0363c2ff644eee096c0b96314aac6fd2227f49fa634a75f67c6d0808f26ad16df9d6bf6d4ef0d207418d
+EBUILD docutils-0.10.ebuild 2181 SHA256 904267bc97b6417c1233ac8d3f9eac70906b6ca9c73d702f4c062661010afab5 SHA512 5a4572fc79f94c883dc21e1d937407227dda8a6d9880dac32e9c22dbd5f1679267f4b159ef3d4d1ac2c87b221f07c16cec318c2d9b7042ce719b54384e1f669e WHIRLPOOL 5d5bfd21ca7c1d04e05d6bde778853f84a9bd931a83350233f5defcfa8ab6b81e8bdd5ee6035dfdbbeae1d3f2d04a8085defa026ab56dcde05d91ffece25d0ad
 EBUILD docutils-0.8.1.ebuild 4480 SHA256 d5dc8b07a95adb229c02290374ed4c82ac79f0557535bdb47fafd41c2af7fd7f SHA512 96739bae1783582ec62d5546189559c3d88ece05c44fcfb5ec0272f8655f89266501c880ddb55b4b0d5b331a3daab82fda8700bfa8be5abcda4aecd0570a47d5 WHIRLPOOL 0234d2259a4d1cffc251294fd7119515dfa057d8800804336104eb45c433c51bc591789961b54f5ea92fc8bcf87b9a75697cf676ed386170845560f6ad9ba4e2
 EBUILD docutils-0.9.1-r1.ebuild 2769 SHA256 ec669ec5daaae753019feb732c7f9d801abddf4bd994d70f7ae2002dd4c0c0d3 SHA512 97cb54ce0ffcb86ff43a7f8daa0139f2fa79772f1f45f4a65fd7ee272d0c95a93846d310e1c8006e03c8c3cf501acf8ca01838315d490c5014c8c734f76d016e WHIRLPOOL 6a65e9aea3becab20da57a7554eeac6c1d6453ed06e73b654b9f30f2f57b5036a87c4798f32272b96ddd75ff706df0dc43bdc3e674b5dffea0f3a0d564696ea6
 EBUILD docutils-0.9.1.ebuild 3583 SHA256 9cb0b18c1522081307f39ab9c82bc950b9f20400c7eb561d97aa7f8da10c1b1d SHA512 eefcbb8f67338741a66915284a4c1efd19574325461148571e93421ae142ad70cff2d65eca9d7393d2e7aea6fc92a6072a2333ce2a8dcb8bffb317c9234efbaa WHIRLPOOL a0f845472c556d38491122a1936a847e8221a3cbe093afaa15349872fa2b6ecfdf76e5d396e56ef5fdd4c9d38d8fbf6d69487fb7ba6312f2d1809de919589a78
 EBUILD docutils-0.9.ebuild 4104 SHA256 866a488bc9bb1683358e9726d005a0580a77683833dccb2e3e9f7649f8fdd6ce SHA512 ee9cc41c56fcc1e41074ed7642525601debace25186c9a44781737999dc01c58d56f7e0b02f8cb31b49dbf13e749bc16ed4a2bccb561ff3b99667a227523f696 WHIRLPOOL b6bc09b2c75f8b3d621b8fdfc76a276a34b9cfffd7c48e8898ba56ea9919fd89baacfa0f6c3f4efc3bbf88573d3126d45bbf2b914b07910700ee17c9994a2009
-MISC ChangeLog 26726 SHA256 dbd3e8079ee643596f3c06385a364284c89059fbde1159e707ac59d022d37983 SHA512 dd747f513ccbcd2aa78fe2dcfd8aee367746743a1876909e8d9189574c09e02b07f6aee7b13481738cb62f7adca0e662c1026402ab879d2a98ae9cf0a20e53d4 WHIRLPOOL 595556c40d72790e189f86aad33a05ec2d4d5c281a969f35329fd5b95e7f9a5b088a3b3da9f431d11f864856f5da0a798cfb522973800ffc087015059d99c792
+MISC ChangeLog 26834 SHA256 a50c6c8c61193bf884211c723572e383099f4ed54f0f64bb47c641f170c82000 SHA512 b9be16084e156272e98009e633fe0e8fd8baba1bfe82f054faab253a6a719abf4ada635d6766ad050057a9bdda3f0408182a57e29c01fb7583d3f2e94be7b06b WHIRLPOOL 5d931a584bc5b24fca8ca753af41e8e5bffbb8df3619ac9ee733bd69053ea751d4ce087ef0261010efd258680e598e4bedd0da38a812118782ac81a1c0dd0779
 MISC metadata.xml 224 SHA256 0bb6bfd1577f4800009497c7813935f712ae6a44dbbdec1a903e79eaa5f21755 SHA512 84a00eb058c5f923404a2ede0df0a2ef9a1b4143a2f7d7b8ddfd5b68c8342dc68e89b5042e603a93b756e8e69cb92a5a32e6aa9ced869d30de1e41c874e080f3 WHIRLPOOL 9392f13e54a9fa3df0396729edecc43709acb478f2d67add1f0b3aeeb16c902fac3d970dcacab9be6ae1094f8700848d790acb260e288440ca80f9be8d0ae0b6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRmmJQAAoJELp701BxlEWfJywP/AtWD0uM+t5mSBDrnLCDz4/Q
-5AvyA+xdsMs1i/hS/wl5f4oZF12vRkwSXQyug0wtLLURAkNnD6TRgw1J50RFw1Al
-71NjWr2osXxiXMUKMujcNhRKx8L4NLknoWFmDSnvkMUUakV3e1SEyluIWOpK68nc
-c6hWPp0tMMGjoRb4w+7Y9yII8Mm0yVaXUVNTumgAqGCgeEkxFeT1t9WmSuDFIhpD
-u/+0/bd7Uspg9r7dDiVxdqotnAU+blMFvmCZUGYV3ufCUj4BuH4xtPNv8LyDitKV
-EzhPWDXvM3SvdmvVJK83El2XZ++msrR7mngbpLTy9mlJDPakdqw6aTrWByJBHOka
-yMqu7wpDTLnPQ/YzC3HB9DI3wyHJUs15WDD3IK2hxmmtS8lnQ3IMvuzqYrCalMel
-45B+UioI4wmwOvRnyUR/4RWjbZqD16VqQdxla9jBBSwytm9L4Oz9SAZUZi4Fv/P5
-dDNjXacERdd8ThAMwTsnihspSrg3eVMbEs1HeLKhQxw5C8zbEn/dcOAi7TjSSGsu
-bC6nJ4DRCgz3Helt97xBBQHcFr9LY9UkhtnRBYr+RFUClt6/za/j7aFhILD8znEw
-9kRxcxl/Gkz8ugcI5WfxUtPcZNC/clTqv1sAA+s1Dcwm4WGd/GBwrUc7EbOPFquF
-8Us75bgDARV2vV4N3mq6
-=CsRU
+iQIcBAEBCgAGBQJRoGxOAAoJELp701BxlEWf/EUP/3kjdEPbRatu9zO5GbLtZnQS
+g6FgaDnhNXpKO0utjvVIq6aLQkCKpnR2rU7M7AJRONlm8+Xu19A2YsrnHjbZg1JE
+PJez3bxb2JhoVAX9O9uDWQ16Pc0yRqt6vCh2zIjB7IzKcoqeSHvfrdWQxZQucky2
+rIxP6+HxveHZSQujPvaH1KR0g2NEvRqAl0urdvt1bUGjGF/m4MagomqTsCkReP2H
+wxXhhmkz83kdKpM1FYPr67tEIryOk6IFTMyj15T8sHyBWZ6FOvPkfoZMrJHVa+kz
+96OqfE46uwjElzIFrDZYJUCqKJzh5TaoCD4ClD/CQsMR3H5a23XbW1xoTHFUCmBw
+f9j8zJOoxE5wmdcPYqMvkL976r5mjsfPhCGd+FFINNo2etXYjwvCnFUUe7/IICtV
+fPgXl5eueX18SHUepu0wiK+WU/LZ2NvtUkEjHsRiew1Jhu3JbS6qbxvv7eyGxoA9
+EwF0UueklVoMWdbaShLrjmJZihdPQyDhGcUzUy7Id8zpe4SmUxh2f+yaRnBONgTf
+ijYghVJ0VDNyt3GLG491ksDa/9+0mYYIC3Ygtqa6SLY0TtWKmST7lrHXs7zBX1nR
+FER+PfpG7uFfnzxub6z9o+/UWpK86DkG70+ULf9XSy7og8ACj8SVhqn4g17b6kkE
+HSKQQpdk9Ytiqpc7WhHW
+=61oa
 -----END PGP SIGNATURE-----
