@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/docutils
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.194 2013/05/20 17:52:53 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils/ChangeLog,v 1.195 2013/05/25 07:49:09 ago Exp $
+
+  25 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
+  Stable for sparc, wrt bug #469660
 
   20 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-0.10.ebuild:
   Stable for s390, wrt bug #469660
