@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/docutils-glep
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils-glep/ChangeLog,v 1.13 2013/05/20 17:53:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docutils-glep/ChangeLog,v 1.14 2013/05/25 07:49:17 ago Exp $
+
+  25 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-glep-0.4-r1.ebuild:
+  Stable for sparc, wrt bug #469660
 
   20 May 2013; Agostino Sarubbo <ago@gentoo.org> docutils-glep-0.4-r1.ebuild:
   Stable for s390, wrt bug #469660
